# serial_tracker

./: README.md  pyproject.toml
project_root1/: .gitignore
project_root1/main/: views.py
project_root1/main/templates/main/: about.html  base.html  index.html
project_root1/project_root/: settings.py  urls.py
project_root1/serials/: admin.py  models.py  urls.py  utils.py  views.py
project_root1/serials/migrations/: 0001_initial.py  0002_alter_genre_options_alter_genre_name_and_more.py  0003_serial_quantity_series_alter_serial_quantity_seasons.py  0004_alter_serial_rating.py
project_root1/serials/templates/serials/: catalog.html  serial.html
project_root1/serials/templatetags/: serial_tags.py
project_root1/templates/: base.html
project_root1/users/: views.py
project_root1/users/templates/users/: login.html  profile.html  registration.html
