[tool.poetry]
name = "serial-tracker"
version = "0.1.0"
description = ""
authors = ["21Sirius <21siriusss@gmail.com>"]
readme = "README.md"
packages = [{include = "serial_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
