[tool.poetry]
name = "serial-tracker"
version = "0.1.0"
description = ""
authors = ["21Sirius <21siriusss@gmail.com>"]
readme = "README.md"
packages = [{include = "serial_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.8"
pillow = "^10.2.0"
ipython = "^8.21.0"
django-debug-toolbar = "^4.3.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
